# layout-generator

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
docs/: layouts.md
layout_generator/: __init__.py  base.py  layout_engine.py
layout_generator/constants/: __init__.py
layout_generator/constants/schemas/: __init__.py
layout_generator/errors/: __init__.py
layout_generator/layouts/: __init__.py  custom_layout.py  kamada_kawai_layout.py
layout_generator/utils/: __init__.py
tests/: test_base.py  test_custom_layout.py  test_kamada_kawai.py  test_layout_constants.py  test_layouts_engine.py
usage/: examples.py
