[project]
name = "layout-generator"
dynamic = ["version"]
description = "Utility package for implementation of different layout algorithms "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "pydantic>=2.7.0",
    "networkx>=3.3"
]

[project.optional-dependencies]
legacy = [
    "pydantic>=2.7.0",
]
stable = [
    "pydantic~=2.7.0",
    "pydantic-settings==2.3.4"
]
test = [
    "pytest~=7.4.3",
    "pytest-env~=1.1.3",
    "pytest-cov~=4.1.0",
    "coverage~=7.3.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "layout_generator/__version__.py"

[tool.hatch.build.targets.sdist]
include = ["/layout_generator"]

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "E402",
    "B904",
    "B905",
    "B009",
    "C417"
]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true


[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [".", "layout_generator"]
testpaths = ["tests"]


addopts = "--cov-report=html --cov-config=pyproject.toml --cov=layout_generator"
[tool.coverage.report]
precision = 2
fail_under = 81.75
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
]


[tool.coverage.run]
omit=[
    "tests/*",
    "usage-examples/*",
    "docs/*",
    "layout_generator/constants/*",
    "layout_generator/errors/*",
    "layout_generator/base.py",
]
